<resources>
    <string name="app_name">Contacts</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_contact">AddContact</string>
    <string name="contact_image_description">Contact image</string>
    <string name="contact_name_text">NAME</string>
    <string name="remove_button_description">Remove button</string>
    <string name="initial_zero_contact">You have zero contacts.</string>
    <string name="select_image">SELECT IMAGE</string>
    <string name="contact_image_text">Contact image</string>
    <string name="enter_name_hint">Enter name</string>
    <string name="enter_contact_name_text">Enter contact name:</string>
    <string name="save_contact_button">Save Contact</string>
    <string name="no_photo_selected_text">No photo selected</string>
</resources>
