<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.kaushiksamba.contacts.AddContact">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lin_layout"
        >

        <TextView android:text="@string/enter_contact_name_text" android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_name_hint"
            android:id="@+id/name_editText"
            />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/image_select_button"
        android:layout_below="@+id/lin_layout"
        android:layout_marginTop="40dp"
        android:text="@string/select_image"
        android:layout_centerHorizontal="true"
        android:onClick="SelectImage"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_below="@+id/image_select_button"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        android:adjustViewBounds="true"
        android:maxHeight="200dp"
        android:src="@drawable/doge"
        android:contentDescription="@string/contact_image_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_marginTop="15dp"
        android:id="@+id/path"
        android:text="@string/no_photo_selected_text"
        android:layout_centerHorizontal="true"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/save_button"
        android:layout_below="@+id/path"
        android:layout_alignParentBottom="true"
        android:text="@string/save_contact_button"
        android:onClick="SaveContact"
        />
</RelativeLayout>
